aqi折线图,使用aqicn平均数据

--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -2,9 +2,9 @@
 {% load staticfiles %}
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>绿色呼吸pm25.com, PM2.5(细颗粒物)及空气质量指数(AQI)实时查询！|绿色呼吸</title>
-    <meta name="Keywords" content="PM2.5,细颗粒物,雾霾,PM2.5浓度,PM2.5指数,PM2.5监测,空气质量,空气质量指数,空气污染,绿色呼吸">
-    <meta name="Description" content="绿色呼吸免费提供PM2.5实时数据查询,更收集分析关于PM2.5有关的一切报告和科研结论,力求以绵薄之力寻同呼吸共命运的你关注PM2.5,关注大气健康!">
+    <title>广州空气质量指数(AQI)实时查询！</title>
+    <!--<meta name="Keywords" content="PM2.5,细颗粒物,雾霾,PM2.5浓度,PM2.5指数,PM2.5监测,空气质量,空气质量指数,空气污染,绿色呼吸">-->
+    <!--<meta name="Description" content="绿色呼吸免费提供PM2.5实时数据查询,更收集分析关于PM2.5有关的一切报告和科研结论,力求以绵薄之力寻同呼吸共命运的你关注PM2.5,关注大气健康!">-->
     
     {% load static %}
     <link rel="stylesheet" href="{% static 'mainapp/css/common.css' %}">
@@ -358,15 +358,15 @@
             <div class="pg_area">
               <div class="pg_area_tab" id="myTab0">
                 <a class="active current">最近24小时<i></i></a>
-                <a class="normal">最近30天<i></i></a>
+                <!--<a class="normal">最近30天<i></i></a>-->
                 <div class="clear"></div>
               </div>
               <div id="myTab0_Content0">
-                <div id="pg_content_24h" class="pg_content" style="background-color:#f7f7f7;"></div>
+                <div id="aqicn" class="pg_content" style="background-color:#f7f7f7;"></div>
               </div>
-              <div id="myTab0_Content1" class="none">
-                <div id="pg_content_30d" class="pg_content" style="background-color:#f7f7f7;"></div>
-              </div>
+              <!--<div id="myTab0_Content1" class="none">-->
+                <!--<div id="pg_content_30d" class="pg_content" style="background-color:#f7f7f7;"></div>-->
+              <!--</div>-->
             </div>
 
 
@@ -405,98 +405,99 @@ window.onload = function() {
 </script>
 
 <script type="text/javascript">
-var myChart = echarts.init(document.getElementById('pg_content_24h'));
-var option = {
-    color: ['#79b05f', '#e58c65'],
-    tooltip: {
-        trigger: 'axis'
-    },
-    legend: {
-        data: ['美国标准', '中国标准']
-    },
-    xAxis: [{
-        type: 'category',
-        boundaryGap: false,
-        data: ["06\u65e509\u65f6", "06\u65e510\u65f6", "06\u65e511\u65f6", "06\u65e512\u65f6", "06\u65e513\u65f6", "06\u65e514\u65f6", "06\u65e515\u65f6", "06\u65e516\u65f6", "06\u65e517\u65f6", "06\u65e518\u65f6", "06\u65e519\u65f6", "06\u65e520\u65f6", "06\u65e521\u65f6", "06\u65e523\u65f6", "07\u65e500\u65f6", "07\u65e501\u65f6", "07\u65e502\u65f6", "07\u65e503\u65f6", "07\u65e504\u65f6", "07\u65e505\u65f6", "07\u65e506\u65f6", "07\u65e507\u65f6", "07\u65e508\u65f6", "07\u65e509\u65f6"],
-        axisLine: {
-            lineStyle: {
-                color: '#d4d4d4'
-            }
-        }
-    }],
-    yAxis: [{
-        type: 'value',
-        axisLabel: {
-            formatter: '{value} '
-        },
-        axisLine: {
-            lineStyle: {
-                color: '#d4d4d4'
-            }
-        }
-    }],
-
-    //曲线数据
-    series: [{
-        name: '美国标准',
-        type: 'line',
-        data: [115, 115, 118, 116, 114, 115, 114, 116, 120, 120, 119, 117, 102, 91, 92, 95, 98, 101, 102, 102, 104, 105, 110, 111]
-    }, {
-        name: '中国标准',
-        type: 'line',
-        data: [67, 69, 70, 71, 69, 71, 69, 72, 74, 75, 74, 77, 71, 59, 57, 59, 59, 62, 62, 63, 63, 65, 67, 70]
-    }]
-};
-// 为echarts对象加载数据 
-// 使用myChart
+var myChart = echarts.init(document.getElementById('aqicn'));
+{% load js %}
+var option = {{ aqicn_option|js }}
 myChart.setOption(option);
-
-// 30d表格
-// 基于准备好的dom，初始化echarts图表
-//var myChart = ec.init(document.getElementById('pg_content_30d'));
-var myChart = echarts.init(document.getElementById('pg_content_30d'));
-var option = {
-    color: ['#79b05f', '#e58c65'],
-    tooltip: {
-        trigger: 'axis'
-    },
-    legend: {
-        data: ['美国标准', '中国标准']
-    },
-    xAxis: [{
-        type: 'category',
-        boundaryGap: false,
-        data: ["08\u65e5", "09\u65e5", "10\u65e5", "11\u65e5", "12\u65e5", "13\u65e5", "14\u65e5", "15\u65e5", "16\u65e5", "17\u65e5", "18\u65e5", "19\u65e5", "20\u65e5", "21\u65e5", "22\u65e5", "23\u65e5", "24\u65e5", "25\u65e5", "26\u65e5", "27\u65e5", "28\u65e5", "29\u65e5", "30\u65e5", "31\u65e5", "01\u65e5", "02\u65e5", "03\u65e5", "04\u65e5", "05\u65e5", "06\u65e5"],
-        axisLine: {
-            lineStyle: {
-                color: '#d4d4d4'
-            }
-        }
-    }],
-    yAxis: [{
-        type: 'value',
-        axisLabel: {
-            formatter: '{value} '
-        },
-        axisLine: {
-            lineStyle: {
-                color: '#d4d4d4'
-            }
-        }
-    }],
-    series: [{
-        name: '美国标准',
-        type: 'line',
-        data: [87, 106, 104, 86, 129, 128, 52, 90, 118, 111, 117, 89, 108, 94, 86, 96, 85, 40, 57, 96, 113, 109, 100, 47, 61, 92, 124, 90, 85, 106]
-    }, {
-        name: '中国标准',
-        type: 'line',
-        data: [49, 61, 65, 48, 83, 83, 32, 53, 70, 69, 79, 52, 65, 63, 52, 58, 57, 25, 48, 69, 77, 70, 66, 31, 42, 57, 76, 57, 56, 66]
-    }]
-};
-// 为echarts对象加载数据 
-myChart.setOption(option);
-
+//var option = {
+//    color: ['#79b05f', '#e58c65'],
+//    tooltip: {
+//        trigger: 'axis'
+//    },
+//    legend: {
+//        data: ['美国标准', '中国标准']
+//    },
+//    xAxis: [{
+//        type: 'category',
+//        boundaryGap: false,
+//        data: ["06\u65e509\u65f6", "06\u65e510\u65f6", "06\u65e511\u65f6", "06\u65e512\u65f6", "06\u65e513\u65f6", "06\u65e514\u65f6", "06\u65e515\u65f6", "06\u65e516\u65f6", "06\u65e517\u65f6", "06\u65e518\u65f6", "06\u65e519\u65f6", "06\u65e520\u65f6", "06\u65e521\u65f6", "06\u65e523\u65f6", "07\u65e500\u65f6", "07\u65e501\u65f6", "07\u65e502\u65f6", "07\u65e503\u65f6", "07\u65e504\u65f6", "07\u65e505\u65f6", "07\u65e506\u65f6", "07\u65e507\u65f6", "07\u65e508\u65f6", "07\u65e509\u65f6"],
+//        axisLine: {
+//            lineStyle: {
+//                color: '#d4d4d4'
+//            }
+//        }
+//    }],
+//    yAxis: [{
+//        type: 'value',
+//        axisLabel: {
+//            formatter: '{value} '
+//        },
+//        axisLine: {
+//            lineStyle: {
+//                color: '#d4d4d4'
+//            }
+//        }
+//    }],
+//
+//    //曲线数据
+//    series: [{
+//        name: '美国标准',
+//        type: 'line',
+//        data: [115, 115, 118, 116, 114, 115, 114, 116, 120, 120, 119, 117, 102, 91, 92, 95, 98, 101, 102, 102, 104, 105, 110, 111]
+//    }, {
+//        name: '中国标准',
+//        type: 'line',
+//        data: [67, 69, 70, 71, 69, 71, 69, 72, 74, 75, 74, 77, 71, 59, 57, 59, 59, 62, 62, 63, 63, 65, 67, 70]
+//    }]
+//};
+//// 为echarts对象加载数据 
+//// 使用myChart
+//myChart.setOption(option);
+//
+//// 30d表格
+//// 基于准备好的dom，初始化echarts图表
+////var myChart = ec.init(document.getElementById('pg_content_30d'));
+//var myChart = echarts.init(document.getElementById('pg_content_30d'));
+//var option = {
+//    color: ['#79b05f', '#e58c65'],
+//    tooltip: {
+//        trigger: 'axis'
+//    },
+//    legend: {
+//        data: ['美国标准', '中国标准']
+//    },
+//    xAxis: [{
+//        type: 'category',
+//        boundaryGap: false,
+//        data: ["08\u65e5", "09\u65e5", "10\u65e5", "11\u65e5", "12\u65e5", "13\u65e5", "14\u65e5", "15\u65e5", "16\u65e5", "17\u65e5", "18\u65e5", "19\u65e5", "20\u65e5", "21\u65e5", "22\u65e5", "23\u65e5", "24\u65e5", "25\u65e5", "26\u65e5", "27\u65e5", "28\u65e5", "29\u65e5", "30\u65e5", "31\u65e5", "01\u65e5", "02\u65e5", "03\u65e5", "04\u65e5", "05\u65e5", "06\u65e5"],
+//        axisLine: {
+//            lineStyle: {
+//                color: '#d4d4d4'
+//            }
+//        }
+//    }],
+//    yAxis: [{
+//        type: 'value',
+//        axisLabel: {
+//            formatter: '{value} '
+//        },
+//        axisLine: {
+//            lineStyle: {
+//                color: '#d4d4d4'
+//            }
+//        }
+//    }],
+//    series: [{
+//        name: '美国标准',
+//        type: 'line',
+//        data: [87, 106, 104, 86, 129, 128, 52, 90, 118, 111, 117, 89, 108, 94, 86, 96, 85, 40, 57, 96, 113, 109, 100, 47, 61, 92, 124, 90, 85, 106]
+//    }, {
+//        name: '中国标准',
+//        type: 'line',
+//        data: [49, 61, 65, 48, 83, 83, 32, 53, 70, 69, 79, 52, 65, 63, 52, 58, 57, 25, 48, 69, 77, 70, 66, 31, 42, 57, 76, 57, 56, 66]
+//    }]
+//};
+//// 为echarts对象加载数据 
+//myChart.setOption(option);
+//
 </script>
-
-
