微调整,增加else情况

--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -207,6 +207,8 @@
                             <span class="cbor_gauge_level1">暂无数据</span>
                           {% endif %}
                         {% endwith %}
+                      {% else %}
+                        <span class="cbor_gauge_level1">暂无数据</span>
                       {% endif %}
 
                         <p class="cbor_gauge_img"></p>
